--- a/glide.yaml
+++ b/glide.yaml
@@ -36,3 +36,4 @@ import:
 - package: github.com/y0ssar1an/q
   version: ^1.0.0
 - package: github.com/Masterminds/squirrel
+- package: github.com/davecgh/go-spew
