--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ go:
 - '1.8'
 - '1.9rc2'
 - tip
+env:
+  - CGO_ENABLED=0
+  - CGO_ENABLED=1
 install:
 - go get -u github.com/golang/dep/cmd/dep
 before_script: 
